# auto-news

./: .dockerignore  .env.template  .env.template.k8s  .flake8  .gitignore  LICENSE  Makefile  README.md  install.env  llm_const.py  pyproject.toml  t.patch
.github/workflow/: docker-image.yml  python.yml
.github/workflows/: docker-compose-deploy.yml  docker-image.yml  python.yml
argocd/: Chart.yaml  README.md  values.yaml
argocd/templates/: app-auto-news.yaml
dags/: collect_weekly.py  journal_daily.py  news_pulling.py  sync_dist.py  todo.py  upgrade.py
docker/: Dockerfile  Dockerfile.k8s  Makefile  docker-compose.yaml  requirements.txt
docker/portainer/: docker-compose.yaml
helm/: Chart.yaml  README.md  values.yaml  values.yml
helm/templates/: job.yml
src/: af_action_pull.py  af_action_save.py  af_clean.py  af_collect.py  af_dist.py  af_end.py  af_journal_pull.py  af_journal_save.py  af_publish.py  af_pull.py  af_save.py  af_start.py  af_sync.py  af_todo_save.py  agent_article.py  chromadb_cli.py  data_model.py  db_cli.py  db_cli_base.py  db_patches.py  db_tables.py  embedding.py  embedding_agent.py  embedding_factory.py  embedding_hf.py  embedding_hf_inst.py  embedding_ollama.py  embedding_openai.py  embedding_openai_0x.py  embedding_openai_1x.py  embedding_utils.py  llama_index_cli.py  llm_agent.py  llm_autogen.py  llm_prompts.py  milvus_cli.py  mysql_cli.py  notion.py  notion_init.py  ops_article.py  (+23 more)
